[package]
name = "cascada"
description = "A general purpose UI layout engine"
version = "0.2.0"
authors = ["Wakunguma Kalimukwa <wakunguma13@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/cascada"
repository = "https://github.com/snubwoody/cascada"
categories = ["gui"]
keywords = ["gui", "graphics","ui","layout","engine"]

exclude = ["benches/*","examples/*"]

[dependencies]
rand = "0.9.2"
thiserror = "2.0.9"

[dev-dependencies]
criterion = "0.7.0"


[workspace.lints.clippy]
enum_glob_use = "warn"
branches_sharing_code = "warn"


[[bench]]
name = "horizontal"
path = "benches/horizontal.rs"
harness = false
