[workspace]
members = ["examples/*"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
cascada = {path = ".",features = ["debug-tools"]}

[package]
name = "cascada"
description = "A general purpose UI layout engine"
version = "0.2.0"
authors = ["Wakunguma Kalimukwa <wakunguma13@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cascada"
repository = "https://github.com/snubwoody/cascada"
categories = ["gui"]
keywords = ["gui", "graphics","ui","layout","engine"]

exclude = ["benches/*","examples/*"]

[features]
debug-tools = []

[dependencies]
thiserror = "2.0.9"

[dev-dependencies]
criterion = "0.7.0"



[workspace.lints.clippy]
enum_glob_use = "warn"
branches_sharing_code = "warn"



[[bench]]
name = "horizontal"
path = "benches/horizontal.rs"
harness = false
